--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,14 +14,9 @@ spec:
     spec:
       containers:
         - name: laravel
-          image: docker.io/zidansivafajar23/catatan-sederhana_test:latest
-          imagePullPolicy: Always
+          image: username_dockerhub/catatan-sederhana:latest
           ports:
             - containerPort: 8000
-          env:
-            - name: APP_ENV
-              value: "production"
-            - name: DB_CONNECTION
-              value: "sqlite"
-            - name: DB_DATABASE
-              value: "/app/database/database.sqlite"
+          command: ["php"]
+          args:
+            ["artisan", "serve", "--host=0.0.0.0", "--port=8000"]
