--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,3 +20,10 @@ spec:
           command: ["php"]
           args:
             ["artisan", "serve", "--host=0.0.0.0", "--port=8000"]
+          env:
+          - name: APP_KEY
+            value: "base64:12pBkfT/k4qamfpFGovJpYyHuOKkjZ20p8UL2x8aHD0="
+          - name: APP_ENV
+            value: "production"
+          - name: APP_DEBUG
+            value: "false"
