--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -23,7 +23,27 @@ spec:
           env:
           - name: APP_ENV
             value: "production"
+
           - name: APP_DEBUG
             value: "false"
+
           - name: APP_KEY
             value: "base64:12pBkfT/k4qamfpFGovJpYyHuOKkjZ20p8UL2x8aHD0="
+
+          - name: DB_CONNECTION
+            value: mysql
+
+          - name: DB_HOST
+            value: mysql
+
+          - name: DB_PORT
+            value: "3306"
+
+          - name: DB_DATABASE
+            value: laravel
+
+          - name: DB_USERNAME
+            value: laravel
+            
+          - name: DB_PASSWORD
+            value: laravel
